--- a/src/main/resources/templates/flagments/header.html
+++ b/src/main/resources/templates/flagments/header.html
@@ -8,50 +8,50 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <!-- favicon
             ============================================ -->
-        <link rel="shortcut icon" type="image/x-icon" th:href="@{img/favicon.ico}">
+        <link rel="shortcut icon" type="image/x-icon" th:href="@{/img/favicon.ico}">
         <!-- Google Fonts
             ============================================ -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i,800" rel="stylesheet">
         <!-- Bootstrap CSS
             ============================================ -->
-        <link rel="stylesheet" th:href="@{css/bootstrap.min.css}">
+        <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
         <!-- Bootstrap CSS
             ============================================ -->
-        <link rel="stylesheet" th:href="@{css/font-awesome.min.css}">
+        <link rel="stylesheet" th:href="@{/css/font-awesome.min.css}">
         <!-- adminpro icon CSS
             ============================================ -->
-        <link rel="stylesheet" th:href="@{css/adminpro-custon-icon.css}">
+        <link rel="stylesheet" th:href="@{/css/adminpro-custon-icon.css}">
         <!-- meanmenu icon CSS
             ============================================ -->
-        <link rel="stylesheet" th:href="@{css/meanmenu.min.css}">
+        <link rel="stylesheet" th:href="@{/css/meanmenu.min.css}">
         <!-- mCustomScrollbar CSS
             ============================================ -->
-        <link rel="stylesheet" th:href="@{css/jquery.mCustomScrollbar.min.css}">
+        <link rel="stylesheet" th:href="@{/css/jquery.mCustomScrollbar.min.css}">
         <!-- animate CSS
             ============================================ -->
-        <link rel="stylesheet" th:href="@{css/animate.css}">
+        <link rel="stylesheet" th:href="@{/css/animate.css}">
         <!-- data-table CSS
             ============================================ -->
-        <link rel="stylesheet" th:href="@{css/data-table/bootstrap-table.css}">
-        <link rel="stylesheet" th:href="@{css/data-table/bootstrap-editable.css}">
+        <link rel="stylesheet" th:href="@{/css/data-table/bootstrap-table.css}">
+        <link rel="stylesheet" th:href="@{/css/data-table/bootstrap-editable.css}">
         <!-- normalize CSS
             ============================================ -->
-        <link rel="stylesheet" th:href="@{css/normalize.css}">
+        <link rel="stylesheet" th:href="@{/css/normalize.css}">
         <!-- charts C3 CSS
             ============================================ -->
-        <link rel="stylesheet" th:href="@{css/c3.min.css}">
+        <link rel="stylesheet" th:href="@{/css/c3.min.css}">
         <!-- forms CSS
             ============================================ -->
-        <link rel="stylesheet" th:href="@{css/form/all-type-forms.css}">
+        <link rel="stylesheet" th:href="@{/css/form/all-type-forms.css}">
         <!-- style CSS
             ============================================ -->
-        <link rel="stylesheet" th:href="@{css/style.css}">
+        <link rel="stylesheet" th:href="@{/css/style.css}">
         <!-- responsive CSS
             ============================================ -->
-        <link rel="stylesheet" th:href="@{css/responsive.css}">
+        <link rel="stylesheet" th:href="@{/css/responsive.css}">
         <!-- modernizr JS
             ============================================ -->
-        <script th:src="@{js/vendor/modernizr-2.8.3.min.js}"></script>
+        <script th:src="@{/js/vendor/modernizr-2.8.3.min.js}"></script>
     </th:block>
 
 </head>
