--- a/src/main/resources/templates/flagments/footer.html
+++ b/src/main/resources/templates/flagments/footer.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <th:block th:fragment="footer">
-    <div class="footer-copyright-area">
+    <div class="footer-copyright-area-">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-12">
@@ -19,65 +19,65 @@
     </div>
     <!-- jquery
             ============================================ -->
-    <script th:src="@{js/vendor/jquery-1.11.3.min.js}"></script>
+    <script th:src="@{/js/vendor/jquery-1.11.3.min.js}"></script>
     <!-- bootstrap JS
         ============================================ -->
-    <script th:src="@{js/bootstrap.min.js}"></script>
+    <script th:src="@{/js/bootstrap.min.js}"></script>
     <!-- meanmenu JS
         ============================================ -->
-    <script th:src="@{js/jquery.meanmenu.js}"></script>
+    <script th:src="@{/js/jquery.meanmenu.js}"></script>
     <!-- mCustomScrollbar JS
         ============================================ -->
-    <script th:src="@{js/jquery.mCustomScrollbar.concat.min.js}"></script>
+    <script th:src="@{/js/jquery.mCustomScrollbar.concat.min.js}"></script>
     <!-- sticky JS
         ============================================ -->
-    <script th:src="@{js/jquery.sticky.js}"></script>
+    <script th:src="@{/js/jquery.sticky.js}"></script>
     <!-- scrollUp JS
         ============================================ -->
-    <script th:src="@{js/jquery.scrollUp.min.js}"></script>
+    <script th:src="@{/js/jquery.scrollUp.min.js}"></script>
     <!-- counterup JS
         ============================================ -->
-    <script th:src="@{js/counterup/jquery.counterup.min.js}"></script>
-    <script th:src="@{js/counterup/waypoints.min.js}"></script>
-    <script th:src="@{js/counterup/counterup-active.js}"></script>
+    <script th:src="@{/js/counterup/jquery.counterup.min.js}"></script>
+    <script th:src="@{/js/counterup/waypoints.min.js}"></script>
+    <script th:src="@{/js/counterup/counterup-active.js}"></script>
     <!-- peity JS
         ============================================ -->
-    <script th:src="@{js/peity/jquery.peity.min.js}"></script>
-    <script th:src="@{js/peity/peity-active.js}"></script>
+    <script th:src="@{/js/peity/jquery.peity.min.js}"></script>
+    <script th:src="@{/js/peity/peity-active.js}"></script>
     <!-- sparkline JS
         ============================================ -->
-    <script th:src="@{js/sparkline/jquery.sparkline.min.js}"></script>
-    <script th:src="@{js/sparkline/sparkline-active.js}"></script>
+    <script th:src="@{/js/sparkline/jquery.sparkline.min.js}"></script>
+    <script th:src="@{/js/sparkline/sparkline-active.js}"></script>
     <!-- flot JS
         ============================================ -->
-    <script th:src="@{js/flot/jquery.flot.js}"></script>
-    <script th:src="@{js/flot/jquery.flot.tooltip.min.js}"></script>
-    <script th:src="@{js/flot/jquery.flot.spline.js}"></script>
-    <script th:src="@{js/flot/jquery.flot.resize.js}"></script>
-    <script th:src="@{js/flot/jquery.flot.pie.js}"></script>
-    <script th:src="@{js/flot/Chart.min.js}"></script>
-    <script th:src="@{js/flot/flot-active.js}"></script>
+    <script th:src="@{/js/flot/jquery.flot.js}"></script>
+    <script th:src="@{/js/flot/jquery.flot.tooltip.min.js}"></script>
+    <script th:src="@{/js/flot/jquery.flot.spline.js}"></script>
+    <script th:src="@{/js/flot/jquery.flot.resize.js}"></script>
+    <script th:src="@{/js/flot/jquery.flot.pie.js}"></script>
+    <script th:src="@{/js/flot/Chart.min.js}"></script>
+    <script th:src="@{/js/flot/flot-active.js}"></script>
     <!-- map JS
         ============================================ -->
-    <script th:src="@{js/map/raphael.min.js}"></script>
-    <script th:src="@{js/map/jquery.mapael.js}"></script>
-    <script th:src="@{js/map/france_departments.js}"></script>
-    <script th:src="@{js/map/world_countries.js}"></script>
-    <script th:src="@{js/map/usa_states.js}"></script>
-    <script th:src="@{js/map/map-active.js}"></script>
+    <script th:src="@{/js/map/raphael.min.js}"></script>
+    <script th:src="@{/js/map/jquery.mapael.js}"></script>
+    <script th:src="@{/js/map/france_departments.js}"></script>
+    <script th:src="@{/js/map/world_countries.js}"></script>
+    <script th:src="@{/js/map/usa_states.js}"></script>
+    <script th:src="@{/js/map/map-active.js}"></script>
     <!-- data table JS
         ============================================ -->
-    <script th:src="@{js/data-table/bootstrap-table.js}"></script>
-    <script th:src="@{js/data-table/tableExport.js}"></script>
-    <script th:src="@{js/data-table/data-table-active.js}"></script>
-    <script th:src="@{js/data-table/bootstrap-table-editable.js}"></script>
-    <script th:src="@{js/data-table/bootstrap-editable.js}"></script>
-    <script th:src="@{js/data-table/bootstrap-table-resizable.js}"></script>
-    <script th:src="@{js/data-table/colResizable-1.5.source.js}"></script>
-    <script th:src="@{js/data-table/bootstrap-table-export.js}"></script>
+    <script th:src="@{/js/data-table/bootstrap-table.js}"></script>
+    <script th:src="@{/js/data-table/tableExport.js}"></script>
+    <script th:src="@{/js/data-table/data-table-active.js}"></script>
+    <script th:src="@{/js/data-table/bootstrap-table-editable.js}"></script>
+    <script th:src="@{/js/data-table/bootstrap-editable.js}"></script>
+    <script th:src="@{/js/data-table/bootstrap-table-resizable.js}"></script>
+    <script th:src="@{/js/data-table/colResizable-1.5.source.js}"></script>
+    <script th:src="@{/js/data-table/bootstrap-table-export.js}"></script>
     <!-- main JS
         ============================================ -->
-    <script th:src="@{js/main.js}"></script>
+    <script th:src="@{/js/main.js}"></script>
 </th:block>
 
 </body>
