--- a/src/main/resources/templates/flagments/sidebar.html
+++ b/src/main/resources/templates/flagments/sidebar.html
@@ -7,26 +7,17 @@
 <body>
 <th:block th:fragment="sidebar">
     <div class="wrapper-pro">
-        <div class="content-inner-all">
+        <div>
             <div class="header-top-area">
-                <div class="fixed-header-top">
+                <div class="header-top">
                     <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-lg-1 col-md-6 col-sm-6 col-xs-12">
-                                <button type="button" id="sidebarCollapse" class="btn bar-button-pro header-drl-controller-btn btn-info navbar-btn">
-                                    <i class="fa fa-bars"></i>
-                                </button>
-                                <div class="admin-logo logo-wrap-pro">
-                                    <a href="#"><img src="img/logo/log.png" alt="" />
-                                    </a>
-                                </div>
-                            </div>
+                        <div class="row" >
                             <div class="col-lg-6 col-md-1 col-sm-1 col-xs-12">
                                 <div class="header-top-menu tabl-d-n">
                                     <ul class="nav navbar-nav mai-top-nav">
                                         <li class="nav-item"><a href="#" class="nav-link">Home</a>
                                         </li>
-                                        <li class="nav-item"><a href="#" class="nav-link">About</a>
+                                        <li class="nav-item"><a th:href="@{/category/index.html}" class="nav-link">Category</a>
                                         </li>
                                         <li class="nav-item"><a href="#" class="nav-link">Services</a>
                                         </li>
