--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,6 +6,7 @@
     </th:block>
 </head>
 <body class="materialdesign">
+<p th:text="${messages}"></p>
 <th:block th:replace="/flagments/sidebar::sidebar"></th:block>
 <div class="admin-dashone-data-table-area">
     <div class="data-table-area mg-b-15">
