--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -44,14 +44,14 @@
                                     </tr>
                                     </thead>
                                     <tbody >
-                                    <tr th:each=" User :${users}">
+                                    <tr th:each=" user :${users}">
                                         <td></td>
-                                        <td th:text="${User.userId}">Id</td>
-                                        <td th:text="${User.getUserName()}">User Name</td>
-                                        <td th:text="${User.getPassword()}">Password</td>
-                                        <td th:text="${User.getEmail()}">Email</td>
+                                        <td th:text="${user.getUserId()}">Id</td>
+                                        <td th:text="${user.getUserName()}">User Name</td>
+                                        <td th:text="${user.getPassword()}">Password</td>
+                                        <td th:text="${user.getEmail()}">Email</td>
                                         <td >
-                                            <p style ="color: blue;" th:style = "${User.getFlagDelete()=='0'} ? 'color: blue' : 'color: red' " th:text="${User.getFlagDelete()=='0'? 'active':'not active'}">
+                                            <p style ="color: blue;" th:style = "${user.getFlagDelete()=='0'} ? 'color: blue' : 'color: red' " th:text="${user.getFlagDelete()=='0'? 'active':'not active'}">
                                                     active
                                             </p>
                                         </td>
@@ -59,8 +59,8 @@
 
                                         <td>
                                             <div class="btn-group project-list-action">
-                                                <a th:href="@{'/admin/user.html?action=edit&id=' + ${User.userId}}"> <button class="btn btn-white btn-xs"><i class="fa fa-pencil"></i> Edit</button></a>
-                                                <a th:href="@{'/admin/user.html?action=edit&id=' + ${User.userId}}"><button class="btn btn-white btn-action btn-xs"><i class="fa fa-trash-o" aria-hidden="true"> </i>Delete</button></a>
+                                                <a th:href="@{'/admin/user.html?action=edit&id=' + ${user.getUserId()}}"> <button class="btn btn-white btn-xs"><i class="fa fa-pencil"></i> Edit</button></a>
+                                                <a th:href="@{'/admin/user.html?action=edit&id=' + ${user.getUserId()}}"><button class="btn btn-white btn-action btn-xs"><i class="fa fa-trash-o" aria-hidden="true"> </i>Delete</button></a>
                                             </div>
                                         </td>
 
