--- a/src/main/resources/templates/flagments/header.html
+++ b/src/main/resources/templates/flagments/header.html
@@ -52,6 +52,10 @@
         <!-- modernizr JS
             ============================================ -->
         <script th:src="@{/js/vendor/modernizr-2.8.3.min.js}"></script>
+        <!--select2-->
+        <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/css/select2.min.css" rel="stylesheet" />
+        <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-beta.1/dist/js/select2.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     </th:block>
 
 </head>
