--- a/src/main/resources/templates/admin/add.html
+++ b/src/main/resources/templates/admin/add.html
@@ -89,74 +89,74 @@
                                                     </div>
                                                     <div class="col-lg-3">
                                                         <div class="form-select-list">
-                                                            <select class="form-control custom-select-value" name="employee"  th:field="*{employee}" >
+                                                            <select class="form-control custom-select-value" name="employee"  th:field="*{pojo.employee}" >
                                                                 <option th:each="em : ${employees}"
                                                                         th:value="${em.getEmployeeId()}"
                                                                         th:text="${em.getName()}"></option>
                                                             </select>
                                                         </div>
                                                     </div>
-                                                    <div class="col-lg-6">
-                                                        <p>
-                                                            <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-                                                                Add employee
-                                                            </a>
-                                                        </p>
-                                                        <div class="collapse" id="collapseExample">
-                                                            <div class="card card-body">
-                                                                <div class="form-group-inner">
-                                                                    <div class="row">
-                                                                        <div class="col-lg-3">
-                                                                            <label class="login2 pull-right pull-right-pro">Full Name</label>
-                                                                        </div>
-                                                                        <div class="col-lg-9">
-                                                                            <input type="text" id="Ename"  class="form-control" name="Ename" />
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="form-group-inner">
-                                                                    <div class="row">
-                                                                        <div class="col-lg-3">
-                                                                            <label class="login2 pull-right pull-right-pro">Phone</label>
-                                                                        </div>
-                                                                        <div class="col-lg-9">
-                                                                            <input type="text" id="phone"  class="form-control" name="phone" />
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="form-group-inner">
-                                                                    <div class="row">
-                                                                        <div class="col-lg-3">
-                                                                            <label class="login2 pull-right pull-right-pro">CMND</label>
-                                                                        </div>
-                                                                        <div class="col-lg-9">
-                                                                            <input type="text" id="cmnd"  class="form-control" name="cmnd" />
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="form-group-inner">
-                                                                    <div class="row">
-                                                                        <div class="col-lg-3">
-                                                                            <label class="login2 pull-right pull-right-pro">Địa chỉ</label>
-                                                                        </div>
-                                                                        <div class="col-lg-9">
-                                                                            <input type="text" id="address"  class="form-control" name="address" />
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                                <div class="form-group-inner">
-                                                                    <div class="row">
-                                                                        <div class="col-lg-3">
-                                                                            <label class="login2 pull-right pull-right-pro">Ngày sinh </label>
-                                                                        </div>
-                                                                        <div class="col-lg-9">
-                                                                            <input type="date" id="birthday"  class="form-control" name="birthday" />
-                                                                        </div>
-                                                                    </div>
-                                                                </div>
-                                                            </div>
-                                                        </div>
-                                                    </div>
+<!--                                                    <div class="col-lg-6">-->
+<!--                                                        <p>-->
+<!--                                                            <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">-->
+<!--                                                                Add employee-->
+<!--                                                            </a>-->
+<!--                                                        </p>-->
+<!--                                                        <div class="collapse" id="collapseExample">-->
+<!--                                                            <div class="card card-body">-->
+<!--                                                                <div class="form-group-inner">-->
+<!--                                                                    <div class="row">-->
+<!--                                                                        <div class="col-lg-3">-->
+<!--                                                                            <label class="login2 pull-right pull-right-pro">Full Name</label>-->
+<!--                                                                        </div>-->
+<!--                                                                        <div class="col-lg-9">-->
+<!--                                                                            <input type="text" id="Ename"  class="form-control" name="Ename" />-->
+<!--                                                                        </div>-->
+<!--                                                                    </div>-->
+<!--                                                                </div>-->
+<!--                                                                <div class="form-group-inner">-->
+<!--                                                                    <div class="row">-->
+<!--                                                                        <div class="col-lg-3">-->
+<!--                                                                            <label class="login2 pull-right pull-right-pro">Phone</label>-->
+<!--                                                                        </div>-->
+<!--                                                                        <div class="col-lg-9">-->
+<!--                                                                            <input type="text" id="phone"  class="form-control" name="phone" />-->
+<!--                                                                        </div>-->
+<!--                                                                    </div>-->
+<!--                                                                </div>-->
+<!--                                                                <div class="form-group-inner">-->
+<!--                                                                    <div class="row">-->
+<!--                                                                        <div class="col-lg-3">-->
+<!--                                                                            <label class="login2 pull-right pull-right-pro">CMND</label>-->
+<!--                                                                        </div>-->
+<!--                                                                        <div class="col-lg-9">-->
+<!--                                                                            <input type="text" id="cmnd"  class="form-control" name="cmnd" />-->
+<!--                                                                        </div>-->
+<!--                                                                    </div>-->
+<!--                                                                </div>-->
+<!--                                                                <div class="form-group-inner">-->
+<!--                                                                    <div class="row">-->
+<!--                                                                        <div class="col-lg-3">-->
+<!--                                                                            <label class="login2 pull-right pull-right-pro">Địa chỉ</label>-->
+<!--                                                                        </div>-->
+<!--                                                                        <div class="col-lg-9">-->
+<!--                                                                            <input type="text" id="address"  class="form-control" name="address" />-->
+<!--                                                                        </div>-->
+<!--                                                                    </div>-->
+<!--                                                                </div>-->
+<!--                                                                <div class="form-group-inner">-->
+<!--                                                                    <div class="row">-->
+<!--                                                                        <div class="col-lg-3">-->
+<!--                                                                            <label class="login2 pull-right pull-right-pro">Ngày sinh </label>-->
+<!--                                                                        </div>-->
+<!--                                                                        <div class="col-lg-9">-->
+<!--                                                                            <input type="date" id="birthday"  class="form-control" name="birthday" />-->
+<!--                                                                        </div>-->
+<!--                                                                    </div>-->
+<!--                                                                </div>-->
+<!--                                                            </div>-->
+<!--                                                        </div>-->
+<!--                                                    </div>-->
                                                 </div>
                                             </div>
 
@@ -196,35 +196,6 @@
 
                     </div>
 
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-<div class="modal-body">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-4">.col-md-4</div>
-            <div class="col-md-4 ml-auto">.col-md-4 .ml-auto</div>
-        </div>
-        <div class="row">
-            <div class="col-md-3 ml-auto">.col-md-3 .ml-auto</div>
-            <div class="col-md-2 ml-auto">.col-md-2 .ml-auto</div>
-        </div>
-        <div class="row">
-            <div class="col-md-6 ml-auto">.col-md-6 .ml-auto</div>
-        </div>
-        <div class="row">
-            <div class="col-sm-9">
-                Level 1: .col-sm-9
-                <div class="row">
-                    <div class="col-8 col-sm-6">
-                        Level 2: .col-8 .col-sm-6
-                    </div>
-                    <div class="col-4 col-sm-6">
-                        Level 2: .col-4 .col-sm-6
-                    </div>
                 </div>
             </div>
         </div>
