--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -39,6 +39,7 @@
                                         <th data-field="username" >User Name</th>
                                         <th data-field="password" >PassWord</th>
                                         <th data-field="email" >Email</th>
+                                        <th data-field="role" >Role</th>
                                         <th data-field="status" >Status</th>
                                         <th >Action</th>
                                     </tr>
@@ -46,12 +47,19 @@
                                     <tbody >
                                     <tr th:each=" user :${users}">
                                         <td></td>
-                                        <td th:text="${user.getUserId()}">Id</td>
-                                        <td th:text="${user.getUserName()}">User Name</td>
-                                        <td th:text="${user.getPassword()}">Password</td>
-                                        <td th:text="${user.getEmail()}">Email</td>
+                                        <td th:text="${user.id}">Id</td>
+                                        <td th:text="${user.username}">User Name</td>
+                                        <td th:text="${user.password}">Password</td>
+                                        <td th:text="${user.email}">Email</td>
                                         <td >
-                                            <p style ="color: blue;" th:style = "${user.getFlagDelete()=='0'} ? 'color: blue' : 'color: red' " th:text="${user.getFlagDelete()=='0'? 'active':'not active'}">
+                                            <div th:each="role : ${user.roles}"  th:switch="${role.name}">
+                                                <span th:case="'admin'" th:style = "'color: white;background-color:green;' " >admin</span>
+                                                <span th:case="'staff'" th:style = "'color: white;background-color: CornflowerBlue;' ">staff</span>
+                                                <span th:case="'seller'" th:style = "'color: white;background-color: lightblue;' ">seller</span>
+                                            </div>
+                                        </td>
+                                        <td >
+                                            <p style ="color: blue;" th:style = "${user.getFlagDelete()=='0'} ? 'color: blue' : 'color: red' " th:text="${user.flagDelete=='0'? 'active':'not active'}">
                                                     active
                                             </p>
                                         </td>
@@ -59,8 +67,8 @@
 
                                         <td>
                                             <div class="btn-group project-list-action">
-                                                <a th:href="@{'/admin/user.html?action=edit&id=' + ${user.getUserId()}}"> <button class="btn btn-white btn-xs"><i class="fa fa-pencil"></i> Edit</button></a>
-                                                <a th:href="@{'/admin/user.html?action=edit&id=' + ${user.getUserId()}}"><button class="btn btn-white btn-action btn-xs"><i class="fa fa-trash-o" aria-hidden="true"> </i>Delete</button></a>
+                                                <a th:href="@{'/admin/user.html?action=edit&id=' + ${user.id}}"> <button class="btn btn-white btn-xs"><i class="fa fa-pencil"></i> Edit</button></a>
+                                                <a th:href="@{'/admin/user.html?action=edit&id=' + ${user.id}}"><button class="btn btn-white btn-action btn-xs"><i class="fa fa-trash-o" aria-hidden="true"> </i>Delete</button></a>
                                             </div>
                                         </td>
 
