update controller user 3

--- a/src/main/resources/templates/admin/user.html
+++ b/src/main/resources/templates/admin/user.html
@@ -2,12 +2,18 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <th:block th:replace="/flagments/header::header">
-        <title>Title</title>
+        <title>User</title>
     </th:block>
 </head>
 <body class="materialdesign">
 <th:block th:replace="/flagments/sidebar::sidebar"></th:block>
-
+<!--<div class="row" id="success-alert">-->
+<!--    <div class="col-lg-12">-->
+<!--        <div class="col-lg-6 alert alert-success">-->
+<!--            ok-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 <div class="admin-dashone-data-table-area">
     <div class="data-table-area mg-b-15">
         <div class="container-fluid">
@@ -16,11 +22,22 @@
                     <div class="sparkline13-list shadow-reset">
                         <div class="sparkline13-hd">
                             <div class="main-sparkline13-hd">
-                                <h1>Category<span class="table-project-n"></span> Table</h1>
+                                <h1>User<span class="table-project-n"></span> Table</h1>
                                 <div class="sparkline13-outline-icon">
                                     <a th:href="@{/admin/user/add.html}"><button type="button" class="btn btn-primary"><i class="fa fa-plus-circle" aria-hidden="true"></i>CREATE NEW</button></a>
                                 </div>
+                                </div>
                             </div>
+                        <div class="col-lg-7" id="success-alert" th:if="${#httpServletRequest.getParameter('success') != null}" >
+                            <div class="col-lg-6 alert alert-success" th:text="${#httpServletRequest.getParameter('success')}">
+
+                            </div>
+                        </div>
+                        <div class="col-lg-7" id="error-alert" th:if="${#httpServletRequest.getParameter('error') != null}" >
+                            <div class="col-lg-6 alert alert-danger" th:text="${#httpServletRequest.getParameter('error')}">
+
+                            </div>
+                        </div>
                         </div>
                         <div class="sparkline13-graph">
                             <div class="datatable-dashv1-list custom-datatable-overright">
@@ -84,5 +101,6 @@
     </div>
 </div>
 <th:block th:replace="/flagments/footer::footer"></th:block>
+
 </body>
 </html>
