--- a/src/main/resources/templates/category/add.html
+++ b/src/main/resources/templates/category/add.html
@@ -35,8 +35,9 @@
                                                     <div class="col-lg-3">
                                                         <label class="login2 pull-right pull-right-pro">Name</label>
                                                     </div>
-                                                    <div class="col-lg-9">
+                                                    <div class="col-lg-5">
                                                         <input type="text" id="name" th:field="*{name}" class="form-control" name="name" />
+                                                        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="badge badge-danger left"></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -45,12 +46,13 @@
                                                     <div class="col-lg-3">
                                                         <label class="login2 pull-right pull-right-pro">Status</label>
                                                     </div>
-                                                    <div class="col-lg-9">
+                                                    <div class="col-lg-4">
                                                         <div class="form-select-list">
                                                             <select class="form-control custom-select-value" name="account" th:field="*{status}">
                                                                 <option value="0">Active</option>
                                                                 <option value="1">Not Active</option>
                                                             </select>
+                                                            <span th:if="${#fields.hasErrors('status')}" th:errors="*{status}" class="badge badge-danger left"></span>
                                                         </div>
                                                     </div>
                                                 </div>
