--- a/src/main/resources/templates/product/edit.html
+++ b/src/main/resources/templates/product/edit.html
@@ -109,7 +109,7 @@
                                             <div class="form-group-inner">
                                                 <div class="row">
                                                     <div class="col-lg-3">
-                                                        <label class="login2 pull-right pull-right-pro">Status</label>
+                                                        <label class="login2 pull-right pull-right-pro">Category</label>
                                                     </div>
                                                     <div class="col-lg-9">
                                                         <div class="form-select-list">
