--- a/src/main/resources/templates/category/edit.html
+++ b/src/main/resources/templates/category/edit.html
@@ -45,6 +45,7 @@
                                                     </div>
                                                     <div class="col-lg-9">
                                                         <input type="text" id="name" th:field="*{name}" class="form-control" name="name" />
+                                                        <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}" class="badge badge-danger left"></span>
                                                     </div>
                                                 </div>
                                             </div>
@@ -59,6 +60,7 @@
                                                                 <option value="1">Active</option>
                                                                 <option value="0">Not Active</option>
                                                             </select>
+                                                            <span th:if="${#fields.hasErrors('status')}" th:errors="*{status}"  class="badge badge-danger left"></span>
                                                         </div>
                                                     </div>
                                                 </div>
